--- a/README.plist
+++ b/README.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://pedro3pv.github.io/ipa-library-download/8 Ball Pool Hack.ipa</string>
+                    <string>https://pedro3pv.github.io/ipa-library-download/8_Ball_Pool_Hack.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
