--- a/8_ball_pool_hack.plist
+++ b/8_ball_pool_hack.plist
@@ -18,7 +18,7 @@
             <dict>
                 <key>543186831</key>
                 <string>com.miniclip.8BallPoolhack</string>
-                <key>bundle-version</key>
+                <key>4.7.7</key>
                 <string>1.0.0</string>
                 <key>kind</key>
                 <string>8_ball_pool</string>
