--- a/8_ball_pool_hack.plist
+++ b/8_ball_pool_hack.plist
@@ -17,7 +17,7 @@
             <key>metadata</key>
             <dict>
                 <key>543186831</key>
-                <string>com.miniclip.8BallPoolhack</string>
+                <string>com.miniclip.8_Ball_Pool</string>
                 <key>4.7.7</key>
                 <string>1.0.0</string>
                 <key>kind</key>
