--- a/8_ball_pool_hack.plist
+++ b/8_ball_pool_hack.plist
@@ -17,13 +17,13 @@
             <key>metadata</key>
             <dict>
                 <key>543186831</key>
-                <string>com.miniclip.8_Ball_Pool</string>
+                <string>com.miniclip.Pool</string>
                 <key>4.7.7</key>
                 <string>1.0.0</string>
                 <key>kind</key>
                 <string>8_ball_pool</string>
                 <key>8_ball_pool_hack</key>
-                <string>HELLO</string>
+                <string>HELLO_Gamer</string>
             </dict>
         </dict>
     </array>
