--- a/8_ball_pool_hack.plist
+++ b/8_ball_pool_hack.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://pedro3pv.github.io/ipa-library-download/8_Ball_Pool_Hack.ipa</string>
+                    <string>https://dl.dropbox.com/s/v6yrxwix8eo9n9i/8_Ball_Pool_Hack.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
