--- a/8_ball_pool_hack.plist
+++ b/8_ball_pool_hack.plist
@@ -16,7 +16,7 @@
             </array>
             <key>metadata</key>
             <dict>
-                <key>543186831</key>
+                <key>id543186831</key>
                 <string>com.miniclip.Pool</string>
                 <key>4.7.7</key>
                 <string>1.0.0</string>
